Сделал тесты, первое ревью